WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301422
[WPEPlatform] Silence unused variable warnings with USE_LIBDRM and USE_GBM disabled
https://bugs.webkit.org/show_bug.cgi?id=301422
Summary
[WPEPlatform] Silence unused variable warnings with USE_LIBDRM and USE_GBM di...
Adrian Perez
Reported
2025-10-24 03:47:10 PDT
When libdrm and libgbm usage are disabled at build time (which is the case when targeting Android, for example), we get a number of warnings: /home/aperez/devel/WebKit-Android/Source/WebKit/WPEPlatform/wpe/headless/WPEDisplayHeadless.cpp:70:11: warning: unused variable 'priv' [-Wunused-variable] 70 | auto* priv = WPE_DISPLAY_HEADLESS(object)->priv; | ^~~~ /home/aperez/devel/WebKit-Android/Source/WebKit/WPEPlatform/wpe/headless/WPEDisplayHeadless.cpp:95:61: warning: unused parameter 'display' [-Wunused-parameter] 95 | static gpointer wpeDisplayHeadlessGetEGLDisplay(WPEDisplay* display, GError** error) | ^ /home/aperez/devel/WebKit-Android/Source/WebKit/WPEPlatform/wpe/headless/WPEDisplayHeadless.cpp:197:61: warning: unused parameter 'name' [-Wunused-parameter] 197 | WPEDisplay* wpe_display_headless_new_for_device(const char* name, GError** error) | ^ 3 warnings generated. Building CXX object Source/WebKit/WPEPlatform/CMakeFiles/WPEPlatform.dir/wpe/WPEDRMDevice.cpp.o /home/aperez/devel/WebKit-Android/Source/WebKit/WPEPlatform/wpe/WPEDRMDevice.cpp:60:63: warning: unused parameter 'deviceFilename' [-Wunused-parameter] 60 | GRefPtr<WPEDRMDevice> wpeDRMDeviceCreateForDevice(const char* deviceFilename) | ^ 1 warning generated. Building CXX object Source/WebKit/WPEPlatform/CMakeFiles/WPEPlatform.dir/wpe/WPEScreen.cpp.o /home/aperez/devel/WebKit-Android/Source/WebKit/WPEPlatform/wpe/WPEScreen.cpp:154:44: warning: unused parameter 'screen' [-Wunused-parameter] 154 | static void wpeScreenInvalidate(WPEScreen* screen) | ^ 1 warning generated. Building CXX object Source/WebKit/WPEPlatform/CMakeFiles/WPEPlatform.dir/wpe/WPEBufferDMABuf.cpp.o /home/aperez/devel/WebKit-Android/Source/WebKit/WPEPlatform/wpe/WPEBufferDMABuf.cpp:86:11: warning: unused variable 'dmabufBuffer' [-Wunused-variable] 86 | auto* dmabufBuffer = WPE_BUFFER_DMA_BUF(object); | ^~~~~~~~~~~~ 1 warning generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2025-10-24 04:14:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52951
EWS
Comment 2
2025-10-24 05:11:43 PDT
Committed
302083@main
(c22c1733b83c): <
https://commits.webkit.org/302083@main
> Reviewed commits have been landed. Closing PR #52951 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug