[WPEPlatform] Silence unused variable warnings with USE_LIBDRM and USE_GBM disabled https://bugs.webkit.org/show_bug.cgi?id=301422

Reviewed by Carlos Garcia Campos.

Move some variable definitions into their corresponding USE(LIBDRM) and
USE(GBM) guards, or mark them with UNUSED_PARAM() where appropriate.

Canonical link: https://commits.webkit.org/302083@main