Source/WebKit/WPEPlatform/wpe/WPEBufferDMABuf.cpp
@@ -84,7 +84,7 @@ static void wpeBufferDMABufDisposeEGLImageIfNeeded(WPEBufferDMABuf* buffer)
 static void wpeBufferDMABufDispose(GObject* object)
 {
     auto* dmabufBuffer = WPE_BUFFER_DMA_BUF(object);
-    wpeBufferDMABufDisposeEGLImageIfNeeded(WPE_BUFFER_DMA_BUF(object));
+    wpeBufferDMABufDisposeEGLImageIfNeeded(dmabufBuffer);
 
 #if USE(GBM)
     auto* priv = dmabufBuffer->priv;
