Source/WebKit/WPEPlatform/wpe/headless/WPEDisplayHeadless.cpp
@@ -67,9 +67,8 @@ WEBKIT_DEFINE_FINAL_TYPE_WITH_CODE(WPEDisplayHeadless, wpe_display_headless, WPE
 
 static void wpeDisplayHeadlessDispose(GObject* object)
 {
-    auto* priv = WPE_DISPLAY_HEADLESS(object)->priv;
-
 #if USE(GBM)
+    auto* priv = WPE_DISPLAY_HEADLESS(object)->priv;
     g_clear_pointer(&priv->gbmDevice, gbm_device_destroy);
     priv->gbmDeviceFD = { };
 #endif
@@ -133,6 +132,8 @@ static gpointer wpeDisplayHeadlessGetEGLDisplay(WPEDisplay* display, GError** er
         g_set_error(error, WPE_EGL_ERROR, WPE_EGL_ERROR_NOT_AVAILABLE, "Can't get EGL display: failed to create GBM EGL display for %s", filename);
         return nullptr;
     }
+#else
+    UNUSED_PARAM(display);
 #endif
 
     if (!epoxy_has_egl_extension(nullptr, "EGL_MESA_platform_surfaceless")) {
@@ -208,6 +209,7 @@ WPEDisplay* wpe_display_headless_new_for_device(const char* name, GError** error
     priv->drmDevice = WTFMove(drmDevice);
     return WPE_DISPLAY(display);
 #else
+    UNUSED_PARAM(name);
     g_set_error_literal(error, WPE_DISPLAY_ERROR, WPE_DISPLAY_ERROR_NOT_SUPPORTED, "DRM device not supported");
     return nullptr;
 #endif
